# fhe-dotnet-bench

./: Fhe.cs  FheClientKey.cs  FheException.cs  FheHandle.cs  FheServerKey.cs  FheUInt32.cs  FheUInt8.cs  Program.cs  README.md  SafeNativeMethods.cs  tfhe-cs-bench.csproj
tfhe-dotnet-lib/: CMakeLists.txt  lib.cpp
